Check that payload files exist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(evil-pipe ${evil-pipe-sources})
 target_sources(evil-pipe PUBLIC ${evil-pipe-sources})
 target_include_directories(evil-pipe PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-find_package(Boost REQUIRED system thread)
+find_package(Boost REQUIRED system thread filesystem)
 include_directories(${BOOST_INCLUDE_DIRS})
 
 target_link_libraries(evil-pipe ${Boost_LIBRARIES})
